--- a/assets/style.css
+++ b/assets/style.css
@@ -15,8 +15,11 @@ body
     margin: 5% auto;
     height: 400px;
     width: 600px;
-    background: #fff;
+    /* background: #fff; */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+    background-image: url(sport.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 .left-box
@@ -26,8 +29,11 @@ body
     left: 0;
     box-sizing: border-box;
     padding: 40px;
-    width: 300px;
-    height: 400px;    
+    width: 600px;
+    height: 400px;
+    background-image: url(sport.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 h1
@@ -69,7 +75,7 @@ input[type="submit"]
     text-transform: uppercase;
     transition: 0.2s ease;
     cursor: pointer;
-    
+
 }
 
 input[type="submit"]:hover,
@@ -88,9 +94,7 @@ input[type="submit"]:focus
     padding: 40px;
     width: 300px;
     height: 400px;
-    background-image: url(image1.jpg);
-    background-size: cover;
-    background-position: center;
+
 }
 
 .or
@@ -144,9 +148,3 @@ button.social
 {
     background: #dd4b39;
 }
-
-
-
-
-
-
