--- a/assets/index.css
+++ b/assets/index.css
@@ -105,6 +105,12 @@
       transition: 0.2s ease;
 
     }
+    .avatar {
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    }
 
     /* .right-box{
 
